@@ -29,7 +29,6 @@ program. If not, see <http://www.gnu.org/licenses/>
 	<folders>${ROOT_CONF}/proftpd</folders>
 	<folders>${ROOT_CONF}/proftpd/imscp</folders>
 	<copy_config>${SYSTEM_CONF}/proftpd/parts</copy_config>
-	<copy_config>${ROOT_CONF}/proftpd/root_domain.conf</copy_config>
 	<copy_config>${SYSTEM_CONF}/proftpd/proftpd.conf</copy_config>
 	<copy_config>${SYSTEM_CONF}/proftpd/proftpd.data</copy_config>
 </install>
