@@ -1,65 +1,0 @@
-<Directory ~/cgi-bin>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  DenyAll
- </Limit>
-</Directory>
-<Directory ~/cgi-bin/*>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  AllowAll
- </Limit>
-</Directory>
-
-<Directory ~/htdocs>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  DenyAll
- </Limit>
-</Directory>
-<Directory ~/htdocs/*>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  AllowAll
- </Limit>
-</Directory>
-
-<Directory ~/errors>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  DenyAll
- </Limit>
-</Directory>
-<Directory ~/errors/*>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  AllowAll
- </Limit>
-</Directory>
-
-<Directory ~/logs>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  DenyAll
- </Limit>
-</Directory>
-<Directory ~/logs/*>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  AllowAll
- </Limit>
-</Directory>
-
-<Directory ~/phptmp>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  DenyAll
- </Limit>
-</Directory>
-<Directory ~/phptmp/*>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  AllowAll
- </Limit>
-</Directory>
-
-<Directory ~/statistics>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  DenyAll
- </Limit>
-</Directory>
-<Directory ~/statistics/*>
- <Limit RMD RNFR DELE XRMD SITE_RMDIR>
-  AllowAll
- </Limit>
-</Directory>
